# khaneducation

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  admin_cli.py  apidocs.md  create_admin.py  create_tables.py  makefile  manage.py  package.json  pyproject.toml  seed.json  seed_db.py  test_main.py  vite.config.ts
.github/workflows/: deploy.yml
app/: config.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  services.py  utils.py
app/ai/: generate_content.py  prompts.py  utils.py
app/ai/video_generation/: lesson.py  utils.py
app/crud/: __init__.py  base.py  main.py
app/routers/: __init__.py  admin.py  auth.py  base.py  dashboard.py  lesson.py  quiz.py  subject.py  user.py  user_profile.py
migrations/: env.py
migrations/versions/: 24a59c150a3f_auto_1753208006_.py  30785e33becf_auto_1752392034_initial_models_.py
src/: App.tsx  main.tsx
src/components/admin/: AdminDashboard.tsx  AdminStats.tsx  LessonManagement.tsx  SubjectManagement.tsx  UserManagement.tsx
src/components/auth/: AuthForm.tsx  ProtectedRoute.tsx
src/components/dashboard/: Dashboard.tsx
src/components/learning/: AIAssistant.tsx  ProgressAnalytics.tsx
src/components/lessons/: LessonDetail.tsx  LessonTasks.tsx  QuizAttempts.tsx
src/components/navigation/: Footer.tsx  Header.tsx  Navbar.tsx  SettingsModal.tsx
src/components/profile/: ProfilePage.tsx  ProfileSetup.tsx
src/components/quiz/: AITutorQuiz.tsx  Quiz.tsx  QuizHeader.tsx  QuizPage.tsx
src/components/subjects/: SubjectDetail.tsx
src/hooks/: useApiQueries.ts
src/pages/: Index.tsx
src/services/: api.ts
src/stores/: authStore.ts
src/types/: api.ts
terraform/: backend.tf  main.tf  output.tf  var.tf  variable.tf
web/: package.json  tailwind.config.ts
web/src/: App.tsx
web/src/services/: api.ts
(+14 files in other folders)
