[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "mangum>=0.19.0",
    "passlib>=1.7.4",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-jose>=3.5.0",
    "pynamodb>=5.5.0",
    "boto3>=1.34.0",
    "bcrypt==4.0.1",
    "openai-agents>=0.2.4",
    "pinecone>=7.3.0",
    "python-docx>=1.2.0",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.116.1",
    "ruff>=0.12.3",
    "typer>=0.16.0",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 150


